# openai_helper

./: .gitignore  Dockerfile  README.md  pyproject.toml
conf/: config.yaml
conf/openai/: openai.yaml
openai_helper/: chat_api_util.py  test_chat_api_util.py  whisper_api_util.py
